--- a/src/apps/users/templates/users/reset_complete.html
+++ b/src/apps/users/templates/users/reset_complete.html
@@ -1,8 +1,13 @@
 {% extends 'layout.html' %}
+
 {% load i18n %}
 
-{% block content %}
 
+{% block extra_meta %}
+  <meta http-equiv="refresh" content="5; url={{ redirect|default:"/" }}"/>
+{% endblock extra_meta %}
+
+{% block content %}
   <div class="grid">
     <div class="gc gc-alone">
       <h1 class="title-h1">{% trans 'Reset password' %}</h1>
@@ -12,13 +17,6 @@
       <p>
         {% trans 'Your password was successfully changed. You will be redirected to a new page in 5 seconds.' %}
       </p>
-
-      <script>
-        setTimeout(function() {
-          location.href = '{{ redirect|default:"/" }}';
-        }, 5000);
-      </script>
     </div>
   </div>
-
 {% endblock content %}
