--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -13,7 +13,9 @@
         {% main_menu %}
       </div>
 
-      <div id="mobile-menu"></div>
+      <div id="mobile-menu">
+        {% main_menu %}
+      </div>
     </div>
   </div>
 </div>
