--- a/src/apps/users/templates/users/reset_confirm.html
+++ b/src/apps/users/templates/users/reset_confirm.html
@@ -6,7 +6,7 @@
 {% block content %}
   <div class="grid">
     <div class="gc gc-alone">
-      <h1 class="title-h1">{% trans 'Reset password' %}</h1>
+      <h1 class="title-h1">{% trans 'Set password' %}</h1>
     </div>
 
     <div class="gc gc-alone">
