--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -3,8 +3,10 @@
 
 {% get_solo 'config.Config' as config %}
 
-<div class="grid">
-  <div class="gc-full gc-alone">
-    <a href="mailto:{{ config.email }}" class="email">{{ config.email }}</a>
+<footer>
+  <div class="grid">
+    <div class="gc-full gc-alone">
+      <a href="mailto:{{ config.email }}" class="email">{{ config.email }}</a>
+    </div>
   </div>
-</div>
+</footer>
