--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -1,21 +1,23 @@
 {% load menu %}
 
-<div class="table grid">
-  <div class="cell gc-wide-2 gc-2 gc-tablet-6 gc-mobile-2">
-    <a href="/" id="logo"></a>
-  </div>
+<header>
+  <div class="table grid">
+    <div class="cell gc-wide-2 gc-2 gc-tablet-6 gc-mobile-2">
+      <a href="/" id="logo"></a>
+    </div>
 
-  <div class="cell gc-wide-6 gc-6 gc-tablet-2 gc-mobile-2">
-    <div class="menu-wrapper">
-      <span id="mobile-menu-button"></span>
+    <div class="cell gc-wide-6 gc-6 gc-tablet-2 gc-mobile-2">
+      <div class="menu-wrapper">
+        <span id="mobile-menu-button"></span>
 
-      <div id="main-menu">
-        {% main_menu %}
-      </div>
+        <div id="main-menu">
+          {% main_menu %}
+        </div>
 
-      <div id="mobile-menu">
-        {% main_menu %}
+        <div id="mobile-menu">
+          {% main_menu %}
+        </div>
       </div>
     </div>
   </div>
-</div>
+</header>
