--- a/src/apps/shop/templates/shop/admin/products.html
+++ b/src/apps/shop/templates/shop/admin/products.html
@@ -7,7 +7,7 @@
                 <th>{% trans 'Image' %}</th>
                 <th>{% trans 'Title' %}</th>
                 <th>{% trans 'Serial number' %}</th>
-                <th>{% trans 'Cost' %}</th>
+                <th>{% trans 'Price' %}</th>
                 <th>{% trans 'Count' %}</th>
                 <th>{% trans 'Total cost' %}</th>
             </tr>
