--- a/src/apps_common/breadcrumbs/static/breadcrumbs/scss/breadcrumbs.scss
+++ b/src/apps_common/breadcrumbs/static/breadcrumbs/scss/breadcrumbs.scss
@@ -6,16 +6,24 @@
   .breadcrumb-item {
     display: inline;
     color: #C0C0C0;
-    &:nth-last-of-type(1) {
+    
+    &.active {
       color: #404040;
-      &:after {
-        content: none;
-      }
     }
 
     &:after {
       content: '/';
       margin: 0 5px;
+    }
+    &:nth-last-of-type(1) {
+      &:after {
+        content: none;
+      }
+    }
+    &:nth-child(1) {
+      &:after {
+        content: '/';
+      }
     }
   }
 }
