--- a/src/apps/shop/templates/shop/admin/products.html
+++ b/src/apps/shop/templates/shop/admin/products.html
@@ -41,7 +41,7 @@
                 <td colspan="5">
                     {% trans 'Total cost of products' %}
                 </td>
-                <td style="font-size: 15px; font-weight: bold; color: green">
+                <td style="font-size: 15px; font-weight: bold; color: green; white-space: nowrap">
                     {{ entity.products_cost.alternate }}
                 </td>
             </tr>
@@ -49,7 +49,7 @@
                 <td colspan="5">
                     {% trans 'Total' %}
                 </td>
-                <td style="font-size: 18px; font-weight: bold; color: green">
+                <td style="font-size: 18px; font-weight: bold; color: green; white-space: nowrap">
                     {{ entity.total_cost.alternate }}
                 </td>
             </tr>
