--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -96,6 +96,10 @@
   }
   label {
     display: inline-block;
+    
+    &[for] {
+      cursor: pointer;
+    }
   }
   b, strong {
     font-weight: bold;
