--- a/src/apps_common/header/static/header/scss/header.scss
+++ b/src/apps_common/header/static/header/scss/header.scss
@@ -45,3 +45,31 @@ header {
     display: inline-block;
   }
 }
+
+#main-menu {
+  color: #0000FF;
+  font-weight: bold;
+
+  li {
+    margin: 0 10px;
+
+    a {
+      padding: 5px;
+      line-height: 1;
+      font-weight: 600;
+      @include fontsize_default;
+
+      &:hover {
+        @include opacity(0.8);
+      }
+    }
+
+    &.active {
+      color: #00FF00;
+
+      a:hover {
+        @include opacity(1);
+      }
+    }
+  }
+}
