--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -46,6 +46,7 @@ body {
     & > .content {
       display: table-cell;
       position: relative;
+      height: 100%;
       z-index: 1;
       vertical-align: top;
     }
