--- a/src/apps_common/header/templates/header/header.html
+++ b/src/apps_common/header/templates/header/header.html
@@ -10,11 +10,11 @@
       <div class="menu-wrapper">
         <span id="mobile-menu-button"></span>
 
-        <div id="main-menu">
+        <div id="main-menu" class="main-menu">
           {% main_menu %}
         </div>
 
-        <div id="mobile-menu">
+        <div id="mobile-menu" class="main-menu">
           {% main_menu %}
         </div>
       </div>
