--- a/src/static/scss/grid.scss
+++ b/src/static/scss/grid.scss
@@ -1,29 +1,35 @@
 @import 'mixins';
 
-$cols_wide: 12;
-$cols_desktop: 12;
-$cols_tablet: 8;
-$cols_mobile: 6;
-
 .grid {
+  display: block;
   width: 100%;
   max-width: $grid_max_width;
-  @include flexbox;
-  @include flex-flow(row wrap);
-  @include align-items(stretch);
-  @include justify-content(flex-start);
+  @include clearfix;
   @include border-box;
   @include grid-paddings(padding-left, padding-right);
   @include media_interval($grid_max_width, 0) {
     margin: 0 auto;
+  }
+
+  .gc-alone {
+    float: none;
+    clear: both;
   }
 }
 
 .gc {
   min-height: 1px;
   padding: 0 $grid_space;
-  @include flex(1 1 auto);
   @include border-box;
+}
+
+.gc-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.g-hidden {
+  display: none;
 }
 
 // Wide-desktop (1200+)
@@ -31,13 +37,25 @@ $cols_mobile: 6;
   @for $index from 1 through $cols_wide - 1 {
     .gc-wide-#{$index} {
       @extend .gc;
-      @include flex-basis((100% / $cols_wide) * $index);
+      float: left;
+      width: (100% / $cols_wide) * $index;
     }
+
+    .gc-ml-wide-#{$index} {
+      margin-left: (100% / $cols_wide) * $index;
+    }
+    .gc-mr-wide-#{$index} {
+      margin-right: (100% / $cols_wide) * $index;
+    }
+  }
+
+  .g-wide-show {
+    display: block;
   }
 
   .gc-wide-full {
     @extend .gc;
-    @include flex-basis(100%);
+    width: 100%;
   }
 }
 
@@ -46,13 +64,25 @@ $cols_mobile: 6;
   @for $index from 1 through $cols_desktop - 1 {
     .gc-#{$index} {
       @extend .gc;
-      @include flex-basis((100% / $cols_desktop) * $index);
+      float: left;
+      width: (100% / $cols_desktop) * $index;
     }
+
+    .gc-ml-#{$index} {
+      margin-left: (100% / $cols_desktop) * $index;
+    }
+    .gc-mr-#{$index} {
+      margin-right: (100% / $cols_desktop) * $index;
+    }
+  }
+
+  .g-show {
+    display: block;
   }
 
   .gc-full {
     @extend .gc;
-    @include flex-basis(100%);
+    width: 100%;
   }
 }
 
@@ -61,13 +91,25 @@ $cols_mobile: 6;
   @for $index from 1 through $cols_tablet - 1 {
     .gc-tablet-#{$index} {
       @extend .gc;
-      @include flex-basis((100% / $cols_tablet) * $index);
+      float: left;
+      width: (100% / $cols_tablet) * $index;
     }
+
+    .gc-ml-tablet-#{$index} {
+      margin-left: (100% / $cols_tablet) * $index;
+    }
+    .gc-mr-tablet-#{$index} {
+      margin-right: (100% / $cols_tablet) * $index;
+    }
+  }
+
+  .g-tablet-show {
+    display: block;
   }
 
   .gc-tablet-full {
     @extend .gc;
-    @include flex-basis(100%);
+    width: 100%;
   }
 }
 
@@ -76,12 +118,24 @@ $cols_mobile: 6;
   @for $index from 1 through $cols_mobile - 1 {
     .gc-mobile-#{$index} {
       @extend .gc;
-      @include flex-basis((100% / $cols_mobile) * $index);
+      float: left;
+      width: (100% / $cols_mobile) * $index;
     }
+
+    .gc-ml-mobile-#{$index} {
+      margin-left: (100% / $cols_mobile) * $index;
+    }
+    .gc-mr-mobile-#{$index} {
+      margin-right: (100% / $cols_mobile) * $index;
+    }
+  }
+
+  .g-mobile-show {
+    display: block;
   }
 
   .gc-mobile-full {
     @extend .gc;
-    @include flex-basis(100%);
+    width: 100%;
   }
 }
