--- a/src/apps_common/comments/static/comments/scss/comments.scss
+++ b/src/apps_common/comments/static/comments/scss/comments.scss
@@ -4,12 +4,12 @@
   form {
     button {
       margin-right: 10px;
-      @include default_fontsize;
+      @include fontsize_default;
     }
 
     textarea {
       width: 100%;
-      @include default_fontsize;
+      @include fontsize_default;
     }
   }
 
@@ -98,7 +98,7 @@
     margin-top: 12px;
     margin-bottom: 10px;
     word-break: break-all;
-    @include default_fontsize;
+    @include fontsize_default;
   }
 
   .actions {
